# YOLOP

./: .gitignore  README _CH.md  README.md  export_onnx.py  hubconf.py  requirements.txt  test_onnx.py
lib/config/: default.py
lib/core/: evaluate.py  function.py  general.py  loss.py  postprocess.py
lib/dataset/: AutoDriveDataset.py  DemoDataset.py  bdd.py
lib/models/: YOLOP.py  common.py  common2.py
lib/utils/: augmentations.py  plot.py  utils.py
toolkits/datasetpre/: gen_bdd_seglabel.py
toolkits/deploy/: CMakeLists.txt  README.md  gen_wts.py  infer_files.cpp  main.cpp  utils.h  yololayer.h  yolov5.cpp  yolov5.hpp  zedcam.hpp
toolkits/label_conversion/: Readme.md
tools/: demo.py  test.py  train.py
